--- a/web/src/app/users/users.component.html
+++ b/web/src/app/users/users.component.html
@@ -4,7 +4,7 @@
     <button mat-raised-button (click)="openUserModal()">Edit User Profile</button>
     <button mat-button color="primary" (click)="toUserProfile()">To User Profile</button>
 </div>
-<table mat-table [dataSource]="usersAccount" *ngIf="totalPoints !== 0">
+<table id="flight-history" mat-table [dataSource]="usersAccount" *ngIf="totalPoints !== 0">
     <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef> Date </th>
         <td mat-cell *matCellDef="let element"> {{element.flightInfo.date | date: 'yyyy-MM-dd, h:mm a'}} </td>
